Update AvoidUnnecessaryObjectsDemo.java